# ode-solver

./: CHANGELOG.md  CMakeLists.txt  LICENSE  MidPoint.h  OdeSolver.h  README.md  SECURITY.md  Vector.h  main.cpp
.github/workflows/: Build.yml
lorenz/: CMakeLists.txt  README.md  graph.plt  lorenz.csv  main.cpp
moleculardynamics/: CMakeLists.txt  README.md  main.cpp
ode/: CMakeLists.txt  Euler.h  MidPoint.h  OdeFunction.h  OdeSolver.h  README.md  RungeKutta.h  Vector.h  VelocityVerlet.h
ode/ode/: Euler.h  Function.h  MidPoint.h  RungeKutta.h  Solver.h  Vector.h  VelocityVerlet.h
planetdynamics/: CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  README.md  main.cpp
test/test/: main.cpp
