
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

INCLUDE(InstallRequiredSystemLibraries)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

################################################################################
# Subdirectories
################################################################################

ADD_SUBDIRECTORY(ode)

ADD_SUBDIRECTORY(lorenz)
ADD_SUBDIRECTORY(moleculardynamics)
ADD_SUBDIRECTORY(planetdynamics)

ADD_SUBDIRECTORY(test)
